--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@tanstack/react-query": "^5.90.19",
     "@use-gesture/react": "^10.3.1",
     "clsx": "^2.1.1",
@@ -22,6 +25,7 @@
     "react-dom": "^19.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^7.12.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
     "zustand": "^5.0.10"
