--- a/firebase.json
+++ b/firebase.json
@@ -15,5 +15,19 @@
             "port": 4000
         },
         "singleProjectMode": true
+    },
+    "hosting": {
+        "public": "dist",
+        "ignore": [
+            "firebase.json",
+            "**/.*",
+            "**/node_modules/**"
+        ],
+        "rewrites": [
+            {
+                "source": "**",
+                "destination": "/index.html"
+            }
+        ]
     }
 }
